[WIP] Add photos components
Update .travis.yml

Update .travis.yml

--- a/jacoco.gradle
+++ b/jacoco.gradle
@@ -121,3 +121,7 @@ project.afterEvaluate {
     }
   }
 }
+
+coveralls {
+  jacocoReportPath = "${buildDir}/reports/jacoco/createDevDebugUnitTestCoverageReport/createDevDebugUnitTestCoverageReport.xml"
+}
