--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ env:
     - ANDROID_API=26
     - EMULATOR_API_LEVEL=25
     - ANDROID_BUILD_TOOLS=26.0.0
-    - ADB_INSTALL_TIMEOUT=25 # minutes
+    - ADB_INSTALL_TIMEOUT=55 # minutes
     - ANDROID_BUILD_TOOLS_VERSION=26.0.0
     - ANDROID_ABI=armeabi-v7a
     - ANDROID_TAG=google_apis
@@ -76,12 +76,12 @@ before_script:
   - cat /proc/cpuinfo
   - echo $ANDROID_TARGET 
   - echo $ANDROID_ABI
-  - echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
-  - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait-for-device
-  - cat `which android-wait-for-emulator`
-  - android-wait-for-emulator
-  - adb shell input keyevent 82 &
+  #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
+  #- emulator -avd test -no-skin -no-window &
+  #- adb wait-for-device
+  #- cat `which android-wait-for-emulator`
+  #- android-wait-for-emulator
+  #- adb shell input keyevent 82 &
 
   - chmod +x gradlew
 
@@ -170,7 +170,7 @@ script:
 #- android-wait-for-emulator
 - adb devices
 - adb shell input keyevent 82 &
-- "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace createDevDebugUnitTestCoverageReport createDevDebugUnitTestCoverageReportKotlin coveralls cAT"
+- "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace createDevDebugUnitTestCoverageReport createDevDebugUnitTestCoverageReportKotlin coveralls"
 
 after_success:
     - codecov #Run codecov
