--- a/ci.gradle
+++ b/ci.gradle
@@ -14,22 +14,18 @@
  * limitations under the License.
  *
  */
+def ciServer = 'TRAVIS'
 
-package io.shtanko.picasagallery.data.album.local
+def executingOnCI = "true" == System.getenv(ciServer)
 
-import io.shtanko.picasagallery.core.prefs.PreferenceHelper
-import io.shtanko.picasagallery.data.album.AlbumDataSource
-import io.shtanko.picasagallery.data.album.AlbumDataSource.LoadAlbumsCallback
-import javax.inject.Inject
-import javax.inject.Singleton
-
-@Singleton
-class LocalAlbumDataSourceImpl @Inject constructor(
-    var preferencesHelper: PreferenceHelper) : AlbumDataSource {
-
-
-  override fun getAlbums(callback: LoadAlbumsCallback) {
-
+// Since for CI we always do full clean builds, we don't want to pre-dex
+// See http://tools.android.com/tech-docs/new-build-system/tips
+subprojects {
+  project.plugins.whenPluginAdded { plugin ->
+    if ('com.android.build.gradle.AppPlugin' == plugin.class.name ||
+        'com.android.build.gradle.LibraryPlugin' ==
+        plugin.class.name) {
+      project.android.dexOptions.preDexLibraries = !executingOnCI
+    }
   }
-
 }
