--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ sudo: required
 dist: precise
 jdk: oraclejdk8
 
+addons:
+  srcclr: true
+
 notifications:
   webhooks: https://fathomless-fjord-24024.herokuapp.com/notify
   email:
