--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -23,6 +23,7 @@ dependencies {
   def espressoVersion = '3.0.0'
   def runnerRulesVersion = '1.0.0'
   def junitVersion = "4.12"
+  def fuelVersion = '1.10.0'
   // endregion
 
   // region SUPPORT
@@ -37,13 +38,11 @@ dependencies {
   // endregion
 
   // region NETWORK/IO
-  compile 'com.squareup.okhttp3:okhttp:3.8.1'
-  compile 'com.squareup.okhttp3:logging-interceptor:3.8.1'
-  compile 'com.google.code.gson:gson:2.8.1'
-  compile 'com.squareup.retrofit2:retrofit:2.3.0'
-  compile('com.squareup.retrofit2:converter-gson:2.1.0') {
-    exclude group: 'com.google.code.gson'
-  }
+  compile "com.github.kittinunf.fuel:fuel:${fuelVersion}"
+  compile "com.github.kittinunf.fuel:fuel-android:${fuelVersion}"
+  compile "com.github.kittinunf.fuel:fuel-rxjava:${fuelVersion}"
+  compile "com.github.kittinunf.fuel:fuel-gson:${fuelVersion}"
+
   // endregion
 
   // region OTHER
@@ -55,9 +54,8 @@ dependencies {
   // endregion
 
   // region RX
-  compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+  compile 'io.reactivex.rxjava2:rxjava:2.1.3'
   compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  compile 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
   // endregion
 
   // region DI
