--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ buildscript {
     classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
     classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.1'
     classpath 'net.saliman:gradle-cobertura-plugin:2.2.2'
+    classpath 'org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.5'
   }
 }
 
