--- a/sonarqube.gradle
+++ b/sonarqube.gradle
@@ -15,22 +15,12 @@
  *
  */
 
-package io.shtanko.picasagallery.core.executor
-
-import java.util.concurrent.LinkedBlockingQueue
-import java.util.concurrent.ThreadPoolExecutor
-import java.util.concurrent.TimeUnit
-import javax.inject.Inject
-import javax.inject.Singleton
-
-@Singleton
-class JobExecutor @Inject constructor() : ThreadExecutor {
-
-  private var threadPoolExecutor: ThreadPoolExecutor = ThreadPoolExecutor(3, 5, 10, TimeUnit.SECONDS,
-      LinkedBlockingQueue<Runnable>(), JobThreadFactory)
-
-  override fun execute(runnable: Runnable?) {
-    threadPoolExecutor.execute(runnable)
+sonarqube {
+  properties {
+    property "sonar.sourceEncoding","UTF-8"
+    property "sonar.inclusions","**/*.kt"
+    property "sonar.exclusions","build/**,**/*.png"
+    property "sonar.import_unknown_files", true
+    property "sonar.android.lint.report", "./build/reports/lint-results.xml"
   }
-
 }
