[WIP] Add internal albums

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,5 +57,7 @@
 
     <activity android:name=".view.photo.PhotosActivity"/>
 
+    <activity android:name=".view.album.InternalAlbumsActivity"/>
+
   </application>
 </manifest>
