--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="io.shtanko.picasagallery">
 
   <uses-permission android:name="android.permission.INTERNET"/>
@@ -29,9 +30,11 @@
       android:allowBackup="false"
       android:icon="@mipmap/ic_launcher"
       android:label="@string/app_name"
+      android:networkSecurityConfig="@xml/network_security_config"
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
-      android:theme="@style/Picasa">
+      android:theme="@style/Picasa"
+      tools:targetApi="n">
 
     <activity
         android:name="io.shtanko.picasagallery.view.launch.LaunchActivity"
