--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,17 @@
 apply from: 'ci.gradle'
 
 buildscript {
-  ext.kotlin_version = '1.1.4-3'
+  ext.kotlin_version = '1.1.51'
   repositories {
     mavenCentral()
     jcenter()
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:2.3.3'
+    classpath 'com.android.tools.build:gradle:3.0.0-rc2'
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     classpath 'com.google.gms:google-services:3.1.0'
     classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
@@ -41,6 +45,10 @@ allprojects {
     maven {
       url 'https://maven.google.com'
     }
+    maven {
+      url 'https://maven.google.com/'
+      name 'Google'
+    }
   }
 }
 
@@ -50,5 +58,5 @@ task clean(type: Delete) {
 
 task wrapper(type: Wrapper) {
   description 'Creates the gradle wrapper.'
-  gradleVersion = '3.5'
+  gradleVersion = '4.1'
 }
