--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -28,10 +28,10 @@ dependencies {
   // endregion
 
   // region SUPPORT
-  compile "com.android.support:appcompat-v7:${supportVersion}"
-  compile "com.android.support:design:${supportVersion}"
-  compile "com.android.support:cardview-v7:${supportVersion}"
-  compile 'com.android.support.constraint:constraint-layout:1.0.2'
+  implementation "com.android.support:appcompat-v7:${supportVersion}"
+  implementation "com.android.support:design:${supportVersion}"
+  implementation "com.android.support:cardview-v7:${supportVersion}"
+  implementation 'com.android.support.constraint:constraint-layout:1.0.2'
   // endregion
 
   // region KOTLIN
@@ -49,6 +49,7 @@ dependencies {
   // region OTHER
   compile 'com.google.code.findbugs:jsr305:3.0.2'
   compile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
+  compile 'com.pddstudio:encrypted-preferences:1.3.0'
   // endregion
 
   // region PLAY SERVICES
@@ -70,7 +71,7 @@ dependencies {
   // endregion
 
   // region IMAGE PROCESSING
-  compile 'com.github.bumptech.glide:glide:3.8.0'
+  compile 'com.github.bumptech.glide:glide:4.2.0'
   // endregion
 
   // region ANDROID TESTING
