--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -1,15 +1,21 @@
 cmake_minimum_required(VERSION 3.4.1)
 
-project(picasa)
+project(picasa-lib)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++14")
 
-add_library( picasa
+add_library( picasa-lib
              SHARED
-             main.cpp )
+             main.cpp
+             Properties.cpp
+             Properties.h
+             PropertiesParser.cpp
+             PropertiesParser.h
+             PropertiesUtils.h
+             PropertiesUtils.cpp)
 
 find_library( log-lib
               log )
 
-target_link_libraries( picasa
+target_link_libraries( picasa-lib
                        ${log-lib} )
