--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -35,69 +35,69 @@ dependencies {
   // endregion
 
   // region KOTLIN
-  compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
   // endregion
 
   // region NETWORK/IO
-  compile "com.github.kittinunf.fuel:fuel:${fuelVersion}"
-  compile "com.github.kittinunf.fuel:fuel-android:${fuelVersion}"
-  compile "com.github.kittinunf.fuel:fuel-rxjava:${fuelVersion}"
-  compile "com.github.kittinunf.fuel:fuel-gson:${fuelVersion}"
+  api "com.github.kittinunf.fuel:fuel:${fuelVersion}"
+  api "com.github.kittinunf.fuel:fuel-android:${fuelVersion}"
+  api "com.github.kittinunf.fuel:fuel-rxjava:${fuelVersion}"
+  api "com.github.kittinunf.fuel:fuel-gson:${fuelVersion}"
 
   // endregion
 
   // region OTHER
-  compile 'com.google.code.findbugs:jsr305:3.0.2'
-  compile "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
-  compile 'com.pddstudio:encrypted-preferences:1.3.0'
+  implementation 'com.google.code.findbugs:jsr305:3.0.2'
+  implementation "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
+  implementation 'com.pddstudio:encrypted-preferences:1.3.0'
   // endregion
 
   // region PLAY SERVICES
-  compile "com.google.android.gms:play-services-auth:${playServicesVersion}"
+  implementation "com.google.android.gms:play-services-auth:${playServicesVersion}"
   // endregion
 
   // region RX
-  compile 'io.reactivex.rxjava2:rxjava:2.1.3'
-  compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  implementation 'io.reactivex.rxjava2:rxjava:2.1.3'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
   // endregion
 
   // region DI
-  compile "com.google.dagger:dagger:${daggerVersion}"
-  compile "com.google.dagger:dagger-android:${daggerVersion}"
-  compile "com.google.dagger:dagger-android-support:${daggerVersion}"
+  implementation "com.google.dagger:dagger:${daggerVersion}"
+  implementation "com.google.dagger:dagger-android:${daggerVersion}"
+  implementation "com.google.dagger:dagger-android-support:${daggerVersion}"
   kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
   kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
-  provided 'org.glassfish:javax.annotation:10.0-b28'
+  compileOnly 'org.glassfish:javax.annotation:10.0-b28'
   // endregion
 
   // region IMAGE PROCESSING
-  compile 'com.github.bumptech.glide:glide:4.2.0'
+  implementation 'com.github.bumptech.glide:glide:4.2.0'
   // endregion
 
   // region ANDROID TESTING
-  androidTestCompile "com.android.support.test:runner:$runnerRulesVersion"
-  androidTestCompile "com.android.support.test:rules:$runnerRulesVersion"
+  androidTestImplementation "com.android.support.test:runner:$runnerRulesVersion"
+  androidTestImplementation "com.android.support.test:rules:$runnerRulesVersion"
 
-  androidTestCompile("com.android.support.test.espresso:espresso-core:$espressoVersion") {
+  androidTestImplementation("com.android.support.test.espresso:espresso-core:$espressoVersion") {
     exclude group: 'com.android.support', module: 'support-annotations'
     exclude group: 'com.android.support', module: 'appcompat'
     exclude group: 'com.android.support', module: 'support-v4'
     exclude module: 'recyclerview-v7'
   }
 
-  androidTestCompile "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
-  androidTestCompile "com.android.support.test.espresso:espresso-intents:$espressoVersion"
-  androidTestCompile "com.android.support:support-annotations:$supportVersion"
-  androidTestCompile "com.android.support:design:$supportVersion"
-  androidTestCompile "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
-  compile "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
-  androidTestCompile "com.google.code.findbugs:jsr305:3.0.2"
+  androidTestImplementation "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
+  androidTestImplementation "com.android.support.test.espresso:espresso-intents:$espressoVersion"
+  androidTestImplementation "com.android.support:support-annotations:$supportVersion"
+  androidTestImplementation "com.android.support:design:$supportVersion"
+  androidTestImplementation "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
+  implementation "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
+  androidTestImplementation "com.google.code.findbugs:jsr305:3.0.2"
   // endregion
 
   // region UNIT TESTING
-  testCompile "junit:junit:$junitVersion"
-  testCompile 'org.assertj:assertj-core:3.8.0'
-  testCompile('com.nhaarman:mockito-kotlin:1.5.0') {
+  testImplementation "junit:junit:$junitVersion"
+  testImplementation 'org.assertj:assertj-core:3.8.0'
+  testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
     exclude group: 'org.jetbrains.kotlin'
   }
   // endregion
