--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -25,6 +25,7 @@ dependencies {
   def junitVersion = "4.12"
   def fuelVersion = '1.10.0'
   def leakCanaryVersion = '1.5.1'
+  def glideVersion = '4.3.1'
   // endregion
 
   // region SUPPORT
@@ -71,7 +72,8 @@ dependencies {
   // endregion
 
   // region IMAGE PROCESSING
-  implementation 'com.github.bumptech.glide:glide:4.2.0'
+  implementation "com.github.bumptech.glide:glide:${glideVersion}"
+  kapt "com.github.bumptech.glide:compiler:${glideVersion}"
   // endregion
 
   // region ANDROID TESTING
