--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -19,10 +19,10 @@ dependencies {
   // region CONSTANTS
   def supportVersion = '27.0.2'
   def daggerVersion = '2.13'
-  def playServicesVersion = '11.6.2'
+  def playServicesVersion = '11.8.0'
   def espressoVersion = '3.0.1'
   def runnerRulesVersion = '1.0.0'
-  def junitVersion = "4.12"
+  def junitVersion = '4.12'
   def fuelVersion = '1.10.0'
   def leakCanaryVersion = '1.5.1'
   def glideVersion = '4.3.1'
