--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,20 @@ static def releaseTime() {
   return new Date().format("yyyy-MM-dd", TimeZone.getTimeZone("UTC"))
 }
 
+// Ensure the no-op dependency is always used in JVM tests.
+configurations.all { config ->
+  if (config.name.contains('UnitTest')) {
+    config.resolutionStrategy.eachDependency { details ->
+      if (details.requested.group == 'com.squareup.leakcanary' &&
+          details.requested.name ==
+          'leakcanary-android') {
+        details.useTarget(group: details.requested.group, name: 'leakcanary-android-no-op',
+            version: details.requested.version)
+      }
+    }
+  }
+}
+
 android {
 
   android.applicationVariants.all { variant ->
