--- a/gradle.properties
+++ b/gradle.properties
@@ -33,3 +33,4 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 org.gradle.daemon=true
+versioneye.api_key=e1fbc6936d915c9643df
