Support coroutines + update dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -221,6 +221,13 @@ kapt {
   correctErrorTypes = true
 }
 
+kotlin {
+  experimental {
+    coroutines 'enable'
+    //useBuildCache = true
+  }
+}
+
 apply from: 'dependencies.gradle'
 apply from: '../jacoco.gradle'
 apply from: '../sonarqube.gradle'
