--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -36,8 +36,8 @@ dependencies {
   // endregion
 
   // region KOTLIN
-  //implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-  implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.1'
+  api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.1'
   // endregion
 
   // region NETWORK/IO
@@ -49,9 +49,9 @@ dependencies {
   // endregion
 
   // region OTHER
-  implementation 'com.google.code.findbugs:jsr305:3.0.2'
-  implementation "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
-  implementation 'com.pddstudio:encrypted-preferences:1.3.0'
+  api 'com.google.code.findbugs:jsr305:3.0.2'
+  api "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
+  api 'com.pddstudio:encrypted-preferences:1.3.0'
   // endregion
 
   // region PLAY SERVICES
@@ -59,21 +59,21 @@ dependencies {
   // endregion
 
   // region RX
-  implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+  api 'io.reactivex.rxjava2:rxjava:2.1.8'
+  api 'io.reactivex.rxjava2:rxandroid:2.0.1'
   // endregion
 
   // region DI
-  implementation "com.google.dagger:dagger:${daggerVersion}"
-  implementation "com.google.dagger:dagger-android:${daggerVersion}"
-  implementation "com.google.dagger:dagger-android-support:${daggerVersion}"
+  api "com.google.dagger:dagger:${daggerVersion}"
+  api "com.google.dagger:dagger-android:${daggerVersion}"
+  api "com.google.dagger:dagger-android-support:${daggerVersion}"
   kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
   kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
   compileOnly 'org.glassfish:javax.annotation:10.0-b28'
   // endregion
 
   // region IMAGE PROCESSING
-  implementation "com.github.bumptech.glide:glide:${glideVersion}"
+  api "com.github.bumptech.glide:glide:${glideVersion}"
   kapt "com.github.bumptech.glide:compiler:${glideVersion}"
   // endregion
 
