--- a/.travis.yml
+++ b/.travis.yml
@@ -101,7 +101,7 @@ before_script:
   #- android-wait-for-emulator
   #- adb shell input keyevent 82 &
   - chmod +x gradlew
-
+  - chmod +x ./config/ci.sh
 before_install:
   - ./config/ci.sh
   - mkdir "$ANDROID_HOME/licenses" || true
