--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,39 @@ notifications:
 
 android:
   components:
+  
+    - build-tools-26
+    - android-14
+    - sys-img-armeabi-v7a-android-14
+    - android-15
+    - sys-img-armeabi-v7a-android-15
+    - android-16
+    - sys-img-armeabi-v7a-android-16
+    - android-17
+    - sys-img-armeabi-v7a-android-17
+    - android-18
+    - sys-img-armeabi-v7a-android-18
+    - android-19
+    - sys-img-armeabi-v7a-android-19
+    - android-20
+    - sys-img-armeabi-v7a-android-20
+    - android-21
+    - sys-img-armeabi-v7a-android-21
+    - android-22
+    - sys-img-armeabi-v7a-android-22
+    - android-23
+    - sys-img-armeabi-v7a-android-23
+    - android-24
+    - sys-img-armeabi-v7a-android-24
+    - android-25
+    - sys-img-armeabi-v7a-android-25
+    - android-26
+    - sys-img-armeabi-v7a-android-26
+    - android-27
+    - sys-img-armeabi-v7a-android-27
+
     - tools
     - platform-tools
-    - build-tools-26.0.2
-    - android-27
     - build-tools-$ANDROID_BUILD_TOOLS
     - android-$ANDROID_API
     - android-$EMULATOR_API_LEVEL
@@ -56,11 +85,24 @@ cache:
   - $HOME/.gradle/native
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
-  - $HOME/.gradle
-  - $HOME/.android/build-cache
 
 matrix:
   include:
+    - env: ANDROID_TARGET=android-27  ANDROID_ABI=armeabi-v7a
+  allow_failures:
+    - env: ANDROID_TARGET=android-14  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-15  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-16  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-17  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-18  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-19  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-20  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-21  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-22  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-23  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-24  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-25  ANDROID_ABI=armeabi-v7a
+    - env: ANDROID_TARGET=android-26  ANDROID_ABI=armeabi-v7a
     - env: ANDROID_TARGET=android-27  ANDROID_ABI=armeabi-v7a
   fast_finish: false
 
@@ -91,9 +133,6 @@ before_script:
   - echo $ANDROID_TARGET
   - echo $ANDROID_ABI
 
-  - android-wait-for-emulator
-  - adb shell input keyevent 82
-
   #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   #- emulator -avd test -no-skin -no-window &
   #- adb wait-for-device
@@ -101,9 +140,8 @@ before_script:
   #- android-wait-for-emulator
   #- adb shell input keyevent 82 &
   - chmod +x gradlew
-  - chmod +x ./config/ci.sh
+
 before_install:
-#  - ./config/ci.sh
   - mkdir "$ANDROID_HOME/licenses" || true
   - echo -e "\n8933bad161af4178b1185d1a37fbf41ea5269c55" > "$ANDROID_HOME/licenses/android-sdk-license"
   - echo -e "\n84831b9409646a918e30573bab4c9c91346d8abd" > "$ANDROID_HOME/licenses/android-sdk-preview-license"
@@ -111,17 +149,14 @@ before_install:
   - ./gradlew dependencies || true
   - pip install --user codecov    #Install codecov
 
-  # Create and start emulator for the script.
-  - echo no | avdmanager create avd --force -n test -k "system-images;android-22;default;armeabi-v7a"
-  - $ANDROID_HOME/emulator/emulator -avd test -no-audio -no-window &
-
 script:
   - echo "***** START SCRIPT *****"
   - echo "Travis branch is $TRAVIS_BRANCH"
   - uname -a
+  #- android-wait-for-emulator
   - adb devices
+  - adb shell input keyevent 82 &
   - "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace createDevDebugUnitTestCoverageReport createDevDebugUnitTestCoverageReportKotlin coveralls"
-  - echo "***** END SCRIPT *****"
 
 after_success:
   - codecov
