--- a/gradle.properties
+++ b/gradle.properties
@@ -32,5 +32,5 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
-org.gradle.daemon=true
+#org.gradle.daemon=true
 versioneye.api_key=e1fbc6936d915c9643df
