--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:supportsRtl="true"
       android:theme="@style/Picasa"
-      tools:targetApi="n">
+      android:appCategory="image"
+      tools:targetApi="o">
 
     <activity
         android:name="io.shtanko.picasagallery.view.launch.LaunchActivity"
@@ -61,6 +62,16 @@
     <activity android:name=".view.photo.PhotosActivity"/>
 
     <activity android:name=".view.album.InternalAlbumsActivity"/>
+
+    <provider
+        android:name="android.support.v4.content.FileProvider"
+        android:authorities="${filesAuthority}"
+        android:exported="false"
+        android:grantUriPermissions="true">
+      <meta-data
+          android:name="android.support.FILE_PROVIDER_PATHS"
+          android:resource="@xml/glide_disk_cache_path" />
+    </provider>
 
   </application>
 </manifest>
