--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,6 @@ jdk: oraclejdk8
 sudo: required
 dist: trusty
 
-addons:
-  srcclr: true
-
 notifications:
   webhooks: https://fathomless-fjord-24024.herokuapp.com/notify
   email:
@@ -161,4 +158,4 @@ script:
   - travis_wait bash ./config/ci-setup-emulator.sh
   - travis_wait bash ./config/ci-instrumentation-tests.sh
 after_success:
-#  - codecov
+  - codecov
