--- a/app/dependencies.gradle
+++ b/app/dependencies.gradle
@@ -17,58 +17,64 @@
 
 dependencies {
   // region CONSTANTS
-  def supportVersion = '27.1.1'
-  def daggerVersion = '2.14.1'
+  def supportVersion      = '27.1.1'
+  def daggerVersion       = '2.14.1'
   def playServicesVersion = '11.8.0'
-  def espressoVersion = '3.0.1'
-  def runnerRulesVersion = '1.0.0'
-  def junitVersion = '4.12'
-  def fuelVersion = '1.10.0'
-  def leakCanaryVersion = '1.5.4'
-  def glideVersion = '4.4.0'
+  def espressoVersion     = '3.0.2'
+  def runnerRulesVersion  = '1.0.0'
+  def junitVersion        = '4.12'
+  def fuelVersion         = '1.12.1'
+  def leakCanaryVersion   = '1.5.4'
+  def glideVersion        = '4.4.0'
   // endregion
 
-  // region SUPPORT
-  api "com.android.support:appcompat-v7:${supportVersion}"
-  api "com.android.support:design:${supportVersion}"
-  api "com.android.support:cardview-v7:${supportVersion}"
-  api 'com.android.support.constraint:constraint-layout:1.1.0'
-  // endregion
+  api(
+      // region SUPPORT
+      "com.android.support:appcompat-v7:${supportVersion}",
+      "com.android.support:design:${supportVersion}",
+      "com.android.support:cardview-v7:${supportVersion}",
+      'com.android.support.constraint:constraint-layout:1.1.0',
+      // endregion
 
-  // region KOTLIN
-  api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-  api 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.1'
-  // endregion
+      // region KOTLIN
+      "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version",
+      'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.1',
+      // endregion
 
-  // region NETWORK/IO
-  api "com.github.kittinunf.fuel:fuel:${fuelVersion}"
-  api "com.github.kittinunf.fuel:fuel-android:${fuelVersion}"
-  api "com.github.kittinunf.fuel:fuel-rxjava:${fuelVersion}"
-  api "com.github.kittinunf.fuel:fuel-gson:${fuelVersion}"
+      // region NETWORK/IO
+      "com.github.kittinunf.fuel:fuel:${fuelVersion}",
+      "com.github.kittinunf.fuel:fuel-android:${fuelVersion}",
+      "com.github.kittinunf.fuel:fuel-rxjava:${fuelVersion}",
+      "com.github.kittinunf.fuel:fuel-gson:${fuelVersion}",
 
-  // endregion
+      // endregion
 
-  // region OTHER
-  api 'com.google.code.findbugs:jsr305:3.0.2'
-  api "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}"
-  api 'com.pddstudio:encrypted-preferences:1.3.0'
-  // endregion
+      // region OTHER
+      'com.google.code.findbugs:jsr305:3.0.2',
+      "com.squareup.leakcanary:leakcanary-android:${leakCanaryVersion}",
+      'com.pddstudio:encrypted-preferences:1.3.0',
+      // endregion
 
-  // region PLAY SERVICES
-  api "com.google.android.gms:play-services-auth:${playServicesVersion}"
-  // endregion
+      // region PLAY SERVICES
+      "com.google.android.gms:play-services-auth:${playServicesVersion}",
+      // endregion
 
-  // region RX
-  api 'io.reactivex.rxjava2:rxjava:2.1.8'
-  api 'io.reactivex.rxjava2:rxandroid:2.0.1'
-  // endregion
+      // region RX
+      'io.reactivex.rxjava2:rxjava:2.1.12',
+      'io.reactivex.rxjava2:rxandroid:2.0.2',
+      // endregion
 
-  // region DI
-  api "com.google.dagger:dagger:${daggerVersion}"
-  api "com.google.dagger:dagger-android:${daggerVersion}"
-  api "com.google.dagger:dagger-android-support:${daggerVersion}"
-  kapt "com.google.dagger:dagger-compiler:${daggerVersion}"
-  kapt "com.google.dagger:dagger-android-processor:${daggerVersion}"
+      // region DI
+      "com.google.dagger:dagger:${daggerVersion}",
+      "com.google.dagger:dagger-android:${daggerVersion}",
+      "com.google.dagger:dagger-android-support:${daggerVersion}"
+  )
+
+  kapt(
+      "com.google.dagger:dagger-compiler:${daggerVersion}",
+      "com.google.dagger:dagger-android-processor:${daggerVersion}"
+  )
+
   compileOnly 'org.glassfish:javax.annotation:10.0-b28'
   // endregion
 
@@ -78,29 +84,37 @@ dependencies {
   // endregion
 
   // region ANDROID TESTING
-  androidTestApi "com.android.support.test:runner:$runnerRulesVersion"
-  androidTestApi "com.android.support.test:rules:$runnerRulesVersion"
+  androidTestImplementation(
+      "com.android.support.test:runner:$runnerRulesVersion",
+      "com.android.support.test:rules:$runnerRulesVersion"
+  )
 
-  androidTestApi("com.android.support.test.espresso:espresso-core:$espressoVersion") {
+  androidTestImplementation("com.android.support.test.espresso:espresso-core:$espressoVersion") {
     exclude group: 'com.android.support', module: 'support-annotations'
     exclude group: 'com.android.support', module: 'appcompat'
     exclude group: 'com.android.support', module: 'support-v4'
     exclude module: 'recyclerview-v7'
   }
 
-  androidTestApi "com.android.support.test.espresso:espresso-contrib:$espressoVersion"
-  androidTestApi "com.android.support.test.espresso:espresso-intents:$espressoVersion"
-  androidTestApi "com.android.support:support-annotations:$supportVersion"
-  androidTestApi "com.android.support:design:$supportVersion"
-  androidTestApi "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
+  androidTestImplementation(
+      "com.android.support.test.espresso:espresso-contrib:$espressoVersion",
+      "com.android.support.test.espresso:espresso-intents:$espressoVersion",
+      "com.android.support:support-annotations:$supportVersion",
+      "com.android.support:design:$supportVersion",
+      "com.android.support.test.espresso.idling:idling-concurrent:$espressoVersion"
+  )
+
   api "com.android.support.test.espresso:espresso-idling-resource:$espressoVersion"
-  androidTestApi "com.google.code.findbugs:jsr305:3.0.2"
+  androidTestImplementation "com.google.code.findbugs:jsr305:3.0.2"
   // endregion
 
   // region UNIT TESTING
-  testApi "junit:junit:$junitVersion"
-  testApi 'org.assertj:assertj-core:3.8.0'
-  testApi('com.nhaarman:mockito-kotlin:1.5.0') {
+  testImplementation(
+      "junit:junit:$junitVersion",
+      'org.assertj:assertj-core:3.8.0'
+  )
+
+  testImplementation('com.nhaarman:mockito-kotlin:1.5.0') {
     exclude group: 'org.jetbrains.kotlin'
   }
   // endregion
