Configure travis ci (#6)
* Migrate to Android Studio 3.2 Canary 12

* Rename methods names

* Update .travis.yml

* Update .travis.yml

* Upgrade gradle version to 3.2.0-alpha14

* Upgrade kotlin version to 1.2.41

* Add ci configuration scripts

* Update .travis.yml

* Update .travis.yml

* Upadte .travis.yml

* Testing only dev build variant

* Update .travis.yml

* Make ci great again

* Update .travis.yml

* Update dependencies.gradle

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,48 +1,33 @@
 language: android
-sudo: required 
-dist: precise
 jdk: oraclejdk8
 
-addons:
-  srcclr: true
+# Choosing faster environment since it's a full VM.
+# https://docs.travis-ci.com/user/reference/overview/
+sudo: required
+dist: trusty
 
 notifications:
   webhooks: https://fathomless-fjord-24024.herokuapp.com/notify
   email:
   - adamluissean@gmail.com
 
+
+env:
+  global:
+    - SDK_API=P
+    - ANDROID_API=27
+    - EMULATOR_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS=27.0.0
+    - ADB_INSTALL_TIMEOUT=55 # minutes
+    - ANDROID_BUILD_TOOLS_VERSION=27.0.0
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+    - CODECOV_TOKEN=c3c594dd-b509-4ca0-9fd0-248dc1af7cf3
+    - TEST_TYPE=unit
+
 android:
   components:
-  
-    - build-tools-26
-    - android-14
-    - sys-img-armeabi-v7a-android-14
-    - android-15
-    - sys-img-armeabi-v7a-android-15
-    - android-16
-    - sys-img-armeabi-v7a-android-16
-    - android-17
-    - sys-img-armeabi-v7a-android-17
-    - android-18
-    - sys-img-armeabi-v7a-android-18
-    - android-19
-    - sys-img-armeabi-v7a-android-19
-    - android-20
-    - sys-img-armeabi-v7a-android-20
-    - android-21
-    - sys-img-armeabi-v7a-android-21
-    - android-22
-    - sys-img-armeabi-v7a-android-22
-    - android-23
-    - sys-img-armeabi-v7a-android-23
-    - android-24
-    - sys-img-armeabi-v7a-android-24
-    - android-25
-    - sys-img-armeabi-v7a-android-25
-    - android-26
-    - sys-img-armeabi-v7a-android-26
-    - android-27
-    - sys-img-armeabi-v7a-android-27
+    - android-$SDK_API
 
     - tools
     - platform-tools
@@ -86,9 +71,28 @@ cache:
   - $HOME/.gradle/caches/
   - $HOME/.gradle/wrapper/
 
-matrix:
+env:
+  global:
+    - SDK_API=P
+    - ANDROID_API=27
+    - EMULATOR_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS=27.0.0
+    - ADB_INSTALL_TIMEOUT=55 # minutes
+    - ANDROID_BUILD_TOOLS_VERSION=27.0.0
+    - ANDROID_ABI=armeabi-v7a
+    - ANDROID_TAG=google_apis
+    - CODECOV_TOKEN=c3c594dd-b509-4ca0-9fd0-248dc1af7cf3
+    - TEST_TYPE=unit
+
+
+  matrix:
+    - TEST_TYPE=unit
+#    - TEST_TYPE=instrumentation EMULATOR_TAG=android EMULATOR_API=21 ABI=armeabi-v7a
+#    - TEST_TYPE=instrumentation EMULATOR_TAG=android EMULATOR_API=19 ABI=armeabi-v7a
+
   include:
     - env: ANDROID_TARGET=android-27  ANDROID_ABI=armeabi-v7a
+
   allow_failures:
     - env: ANDROID_TARGET=android-14  ANDROID_ABI=armeabi-v7a
     - env: ANDROID_TARGET=android-15  ANDROID_ABI=armeabi-v7a
@@ -106,19 +110,12 @@ matrix:
     - env: ANDROID_TARGET=android-27  ANDROID_ABI=armeabi-v7a
   fast_finish: false
 
-env:
-  global:
-    - ANDROID_API=27
-    - EMULATOR_API_LEVEL=25
-    - ANDROID_BUILD_TOOLS=27.0.0
-    - ADB_INSTALL_TIMEOUT=55 # minutes
-    - ANDROID_BUILD_TOOLS_VERSION=27.0.0
-    - ANDROID_ABI=armeabi-v7a
-    - ANDROID_TAG=google_apis
-    - CODECOV_TOKEN=c3c594dd-b509-4ca0-9fd0-248dc1af7cf3
+
 
 before_script:
   # Create and start emulator
+  - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
+  - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
   - echo PATH $PATH
   - android list target
   - android list sdk
@@ -132,6 +129,7 @@ before_script:
   - cat /proc/cpuinfo
   - echo $ANDROID_TARGET
   - echo $ANDROID_ABI
+  - ././config/ci-before-script.sh
 
   #- echo no | android create avd --force -n test -t $ANDROID_TARGET --abi $ANDROID_ABI
   #- emulator -avd test -no-skin -no-window &
@@ -153,10 +151,11 @@ script:
   - echo "***** START SCRIPT *****"
   - echo "Travis branch is $TRAVIS_BRANCH"
   - uname -a
-  #- android-wait-for-emulator
+
   - adb devices
   - adb shell input keyevent 82 &
-  - "./gradlew clean build -Pbuild=dev -PdisablePreDex --stacktrace createDevDebugUnitTestCoverageReport createDevDebugUnitTestCoverageReportKotlin coveralls"
-
+  - bash ./config/ci-unit-tests.sh
+  - travis_wait bash ./config/ci-setup-emulator.sh
+  - travis_wait bash ./config/ci-instrumentation-tests.sh
 after_success:
   - codecov
