--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,19 +30,26 @@ final RELEASE = 'release'
 final MOCK = 'mock'
 final DEV = 'dev'
 // please set FLAVOR_TO_KEEP to 'dev', and set 'other' exclude dev
-final FLAVOR_TO_KEEP = 'dev'
+def FLAVOR_TO_KEEP = 'dev'
 final RELEASE_PROPERTIES_FILE = 'config/release.properties'
 final DEBUG_PROPERTIES_FILE = 'config/debug.properties'
+final FLAVOR_PROPERTIES_FILE = 'config/flavor.properties'
 final COMPILE_SDK_VERSION = 27
 final TARGET_SDK_VERSION = 27
 final MIN_SDK_VERSION = 14
 // endregion
 
 def props = new Properties()
+def flavorProps = new Properties()
+
 if (rootProject.file(RELEASE_PROPERTIES_FILE).exists()) {
   props.load(new FileInputStream(rootProject.file(RELEASE_PROPERTIES_FILE)))
 } else {
   props.load(new FileInputStream(rootProject.file(DEBUG_PROPERTIES_FILE)))
+}
+if (rootProject.file(FLAVOR_PROPERTIES_FILE).exists()) {
+  flavorProps.load(new FileInputStream(rootProject.file(FLAVOR_PROPERTIES_FILE)))
+  FLAVOR_TO_KEEP = flavorProps['KEY_FLAVOR_TO_KEEP']
 }
 
 static def releaseTime() {
