Android studio v3.2 beta (#9)
* Configure gradle

* [WIP] Add flavor.sh for changing flavor.properties

* [WIP] Configure pre-push git hooks

* WIP Configure pre-push git hooks

* Update README.md

* Add flavor properties

* Upgrade gradle version

* Bump gradle tools

* Bump dagger to 2.16

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,18 +29,27 @@ apply plugin: 'org.standardout.versioneye'
 final RELEASE = 'release'
 final MOCK = 'mock'
 final DEV = 'dev'
+// please set FLAVOR_TO_KEEP to 'dev', and set 'other' exclude dev
+def FLAVOR_TO_KEEP = 'dev'
 final RELEASE_PROPERTIES_FILE = 'config/release.properties'
 final DEBUG_PROPERTIES_FILE = 'config/debug.properties'
+final FLAVOR_PROPERTIES_FILE = 'config/flavor.properties'
 final COMPILE_SDK_VERSION = 27
 final TARGET_SDK_VERSION = 27
 final MIN_SDK_VERSION = 14
 // endregion
 
 def props = new Properties()
+def flavorProps = new Properties()
+
 if (rootProject.file(RELEASE_PROPERTIES_FILE).exists()) {
   props.load(new FileInputStream(rootProject.file(RELEASE_PROPERTIES_FILE)))
 } else {
   props.load(new FileInputStream(rootProject.file(DEBUG_PROPERTIES_FILE)))
+}
+if (rootProject.file(FLAVOR_PROPERTIES_FILE).exists()) {
+  flavorProps.load(new FileInputStream(rootProject.file(FLAVOR_PROPERTIES_FILE)))
+  FLAVOR_TO_KEEP = flavorProps['KEY_FLAVOR_TO_KEEP']
 }
 
 static def releaseTime() {
@@ -163,12 +172,12 @@ android {
 
     main {
       res.srcDirs = ['src/main/res/main',
-                     'src/main/res/album',
-                     'src/main/res/user',
-                     'src/main/res/about',
-                     'src/main/res/auth',
-                     'src/main/res/resources',
-                     'src/main/res']
+          'src/main/res/album',
+          'src/main/res/user',
+          'src/main/res/about',
+          'src/main/res/auth',
+          'src/main/res/resources',
+          'src/main/res']
     }
   }
 
@@ -177,7 +186,7 @@ android {
   def typeName = ''
   def flavorName = ''
 
-  if (build_param != DEV) {
+  if (build_param != DEV && FLAVOR_TO_KEEP != DEV) {
     //exclude dev
     android.variantFilter { variant ->
 
@@ -226,7 +235,6 @@ kapt {
 kotlin {
   experimental {
     coroutines 'enable'
-    //useBuildCache = true
   }
 }
 
